Fix: Overflow issue on Firefox browser

--- a/src/sass/platform.sass
+++ b/src/sass/platform.sass
@@ -52,15 +52,16 @@
     z-index: 9
     .nav-b
       height: 100%
-      padding: 140px 24px 90px
-      overflow: auto
-
+      padding: 140px 24px 0
+      overflow-y: auto
     .nav-i
       font-size: 20px
       margin-bottom: 8px
       font-weight: normal
       line-height: 24px
       padding: 8px 0
+      &:last-child
+        padding-bottom: 90px
       a
         line-height: 28px
         text-decoration: none
