--- a/src/sass/tablet/platform.sass
+++ b/src/sass/tablet/platform.sass
@@ -9,7 +9,7 @@
       .nav-b
         padding-top: 40px
         padding-right: 80px
-        padding-bottom: 80px
+        padding-bottom: 0
         overflow: auto
       &.active
         display: block
